# roboinstruct-2

./: .gitignore  LICENSE  README.md  architectures.py  config.py  make_dataset.py  model.py  sample.py  train.py  utils.py
autoencoder/chainer_vaegan/: .gitignore  README.md
autoencoder/chainer_vaegan/src/: net.py  rnn_net.py  train.py
demonstrate_ros_package/: CMakeLists.txt  README.md  package.xml
demonstrate_ros_package/scripts/: publish_move_pose.py  record_demonstration.py
demonstrate_ros_package/src/: leap_al5d.cpp
