<?xml version="1.0"?>
<package>
  <name>demonstrate_leap</name>
  <version>0.1.0</version>
  <description>This package helps to control the AL5D and Mico arm using Leap motion and record demonstrations.</description>
  <maintainer email="rrahmati@cs.ucf.com">Rouhollah Rahmatizadeh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

</package>
